2015-10-23  Tim Horton  <timothy_horton@apple.com>

        WKView being inside WKWebView leads to weird API issues
        https://bugs.webkit.org/show_bug.cgi?id=150174

        Reviewed by Anders Carlsson.

        * UIProcess/API/mac/WKView.mm:
        (-[WKView hitTest:]):
        (-[WKView _processDidExit]):
        (-[WKView _setThumbnailView:]):
        (-[WKView _thumbnailView]):
        (-[WKFlippedView isFlipped]): Deleted.
        (-[WKView dealloc]): Deleted.
        (-[WKView _setAcceleratedCompositingModeRootLayer:]): Deleted.
        (-[WKView _acceleratedCompositingModeRootLayer]): Deleted.
        (-[WKView _updateThumbnailViewLayer]): Deleted.
        (-[WKView _reparentLayerTreeInThumbnailView]): Deleted.
        * UIProcess/API/mac/WKViewInternal.h:
        * UIProcess/Cocoa/WebViewImpl.h:
        (WebKit::WebViewImpl::acceleratedCompositingRootLayer):
        (WebKit::WebViewImpl::layerHostingView):
        (WebKit::WebViewImpl::thumbnailView):
        * UIProcess/Cocoa/WebViewImpl.mm:
        (-[WKFlippedView isFlipped]):
        (WebKit::WebViewImpl::~WebViewImpl):
        (WebKit::WebViewImpl::setAcceleratedCompositingRootLayer):
        (WebKit::WebViewImpl::setThumbnailView):
        (WebKit::WebViewImpl::reparentLayerTreeInThumbnailView):
        (WebKit::WebViewImpl::updateThumbnailViewLayer):
        * UIProcess/mac/PageClientImpl.mm:
        (WebKit::PageClientImpl::enterAcceleratedCompositingMode):
        (WebKit::PageClientImpl::exitAcceleratedCompositingMode):
        (WebKit::PageClientImpl::updateAcceleratedCompositingMode):
        (WebKit::PageClientImpl::setAcceleratedCompositingRootLayer):
        (WebKit::PageClientImpl::acceleratedCompositingRootLayer):
        Move accelerated compositing and thumbnail view code.

2015-10-23  Tim Horton  <timothy_horton@apple.com>

        WKView being inside WKWebView leads to weird API issues
        https://bugs.webkit.org/show_bug.cgi?id=150174

        Reviewed by Anders Carlsson.
