@@ -3,6 +3,14 @@
         WKView being inside WKWebView leads to weird API issues
         https://bugs.webkit.org/show_bug.cgi?id=150174
 
+        * UIProcess/Cocoa/WebViewImpl.h:
+        Whoops.
+
+2015-10-23  Tim Horton  <timothy_horton@apple.com>
+
+        WKView being inside WKWebView leads to weird API issues
+        https://bugs.webkit.org/show_bug.cgi?id=150174
+
         Reviewed by Anders Carlsson.
 
         * UIProcess/API/mac/WKView.mm:
